infrastructure/dev/jupyterlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-ingress
  namespace: jupyterlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: jupyter.cluster
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterlab-service
            port:
              number: 8888
